Add task for copying fonts, add real and blind menu items

--- a/www/index.html
+++ b/www/index.html
@@ -80,32 +80,36 @@
       </div>
     </div-->
 
-    <!--a href="/cookery-book">Cookery book</a-->
-
     <div class="container">
 
       <div class="page-header" id="banner">
         <div class="row">
-          <div class="col-lg-3 col-md-7 col-sm-6">
+          <div class="col-lg-3">
             <img src="./img/js-superhero_v1.png" alt="JS superhero" title="JS superhero" class="img-responsive" />
           </div>
-          <div class="col-lg-9 col-md-5 col-sm-6">
+          <div class="col-lg-9">
 
           </div>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-3 col-sm-4">
             <div class="list-group table-of-contents">
-              <a class="list-group-item" href="#navbar">Navbar</a>
-              <a class="list-group-item" href="#buttons">Buttons</a>
-              <a class="list-group-item" href="#typography">Typography</a>
-              <a class="list-group-item" href="#tables">Tables</a>
-              <a class="list-group-item" href="#forms">Forms</a>
-              <a class="list-group-item" href="#navs">Navs</a>
-              <a class="list-group-item" href="#indicators">Indicators</a>
-              <a class="list-group-item" href="#progress-bars">Progress bars</a>
-              <a class="list-group-item" href="#containers">Containers</a>
-              <a class="list-group-item" href="#dialogs">Dialogs</a>
+              <a class="list-group-item" href="/cookery-book">
+                <span class="glyphicon glyphicon-leaf" aria-hidden="true"></span>
+                Cookery book
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="glyphicon glyphicon-ban-circle" aria-hidden="true"></span>
+                Blind placeholder 1
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="glyphicon glyphicon-ban-circle" aria-hidden="true"></span>
+                Blind placeholder 2
+              </a>
+              <a class="list-group-item" href="#">
+                <span class="glyphicon glyphicon-ban-circle" aria-hidden="true"></span>
+                Blind placeholder 3
+              </a>
             </div>
           </div>
         </div>
